manifests-successful/laravel-1.0.0.tgz-manifest.yaml
---
# Source: laravel/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-laravel
  labels:
    helm.sh/chart: laravel-1.0.0
    app.kubernetes.io/name: laravel
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "8.0.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: laravel
    app.kubernetes.io/instance: my-release
    laravel.com/pod-type: web
---
# Source: laravel/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-laravel
  labels:
    helm.sh/chart: laravel-1.0.0
    app.kubernetes.io/name: laravel
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "8.0.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: laravel
      app.kubernetes.io/instance: my-release
      laravel.com/pod-type: web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: laravel
        app.kubernetes.io/instance: my-release
        laravel.com/pod-type: web
    spec:
      volumes:
        - name: app
          emptyDir: {}
        - name: env
          secret:
            secretName:  my-release-env 
        - name: nginx-config
          configMap:
            name:  my-release-nginx-config 
        - name: php-ini-config
          configMap:
            name:  my-release-php-ini-config 
        - name: php-fpm-config
          configMap:
            name:  my-release-php-fpm-config 

      serviceAccountName: my-release-laravel

      securityContext:
        {}

      containers:
        - name: php-fpm
          securityContext:
            {}
          image: "quay.io/renokico/laravel-helm-demo:0.6.0"
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: app
              mountPath: /app
            - name: env
              mountPath: /tmp/.env
              subPath: .env
            - name: php-ini-config
              mountPath: /usr/local/etc/php/php.ini
              subPath: php.ini
            - name: php-fpm-config
              mountPath: /usr/local/etc/php-fpm.d/laravel.conf
              subPath: laravel.conf
          ports:
            - name: php-fpm
              containerPort: 9000
              protocol: TCP
          readinessProbe:
            tcpSocket:
              port: 9000
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: 9000
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            {}
          lifecycle:
            postStart:
              exec:
                command:
                  - /bin/sh
                  - -c
                  - cp /tmp/.env /var/www/html/.env && cp -r /var/www/html/. /app && cd /var/www/html && sh deploy.sh
        - name: scheduler
          securityContext:
            {}
          image: "quay.io/renokico/laravel-helm-demo:0.6.0"
          imagePullPolicy: IfNotPresent
          command:
            - php
            - artisan
            - schedule:work
          volumeMounts:
            - name: env
              mountPath: /tmp/.env
              subPath: .env
            - name: php-ini-config
              mountPath: /usr/local/etc/php/php.ini
              subPath: php.ini
          readinessProbe:
            exec:
              command:
                - php
                - -v
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            exec:
              command:
                - php
                - -v
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            {}
          lifecycle:
            postStart:
              exec:
                command:
                  - /bin/sh
                  - -c
                  - cp /tmp/.env /var/www/html/.env && cp -r /var/www/html/. /app && cd /var/www/html && sh deploy.sh
        - name: nginx
          securityContext:
            {}
          image: "nginx:1.19"
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: app
              mountPath: /var/www/html
            - name: nginx-config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
            - name: http2
              containerPort: 8080
              protocol: TCP
          resources:
            {}
---
# Source: laravel/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-release-laravel
  labels:
    helm.sh/chart: laravel-1.0.0
    app.kubernetes.io/name: laravel
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "8.0.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    nginx.ingress.kubernetes.io/custom-http-errors: "404"
spec:
  rules:
    - host: "test.laravel.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-release-laravel
                port:
                  number: 80
